# zpls-protocol

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: CONFORMANCE_VECTORS.md  FAQ.md  GITHUB_PUBLISH.md  KILLER_DEMO.md  LAUNCH.md  MANIFEST.md  Q_MATRIX_MATH.md  ROADMAP.md  THREAT_MODEL.md  WHITEPAPER.md  ZPL-S_CORE_SPEC.md  conformance_vectors_s1_1.json
examples/: fabric_demo.py  http_server_demo.py  killer_demo.py  mesh_demo.py  qgate.py  qmatrix.py  roundtrip.py  seal_demo.py
src/zpls/: __init__.py  cli.py  codec.py  delta.py  fabric.py  frame.py  http_server.py  mesh.py  qlogic.py  seal.py
tests/: test_zpls_cli.py  test_zpls_conformance.py  test_zpls_delta.py  test_zpls_fabric.py  test_zpls_frame.py  test_zpls_http_server.py  test_zpls_mesh.py  test_zpls_qlogic.py  test_zpls_seal.py
